# webgen-files

./: CLAUDE.md  Cargo.toml  README.md
packaging/: com.webgen.Files.desktop
packaging/deb-scripts/: postinst  postrm
packaging/settings/: com.webgen.Files.toml
src/: assoc.rs  entry.rs  main.rs  meta.rs  tree.rs
